Corrected Premium pages (might still do it in different branch)

--- a/WeatherApp/Pages/Shared/_LoginPartial.cshtml
+++ b/WeatherApp/Pages/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
         @if (!isPremium)
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-page="/Premium/Index">Become Premium</a>
+                <a class="nav-link text-dark" asp-area="" asp-page="/Premium">Become Premium</a>
             </li>
         }
         <li class="nav-item">
