Added models and front end page for Favorite places

--- a/WeatherApp/Pages/Index.cshtml
+++ b/WeatherApp/Pages/Index.cshtml
@@ -29,7 +29,7 @@
         {
             <li>
                 <strong>@history.Location.Name</strong><br />
-                Date: @history.Forecast.ForecastDays[0].Date.ToShortDateString() <br />
+                Date: @history.Forecast.ForecastDays[0].Date<br />
                 Max Temp: @history.Forecast.ForecastDays[0].Day.MaxTempC°C<br />
                 Min Temp: @history.Forecast.ForecastDays[0].Day.MinTempC°C<br />
                 Avg Temp: @history.Forecast.ForecastDays[0].Day.AvgTempC°C<br />
