--- a/WeatherApp/Pages/Index.cshtml
+++ b/WeatherApp/Pages/Index.cshtml
@@ -49,6 +49,7 @@
                 Min Temp: @history.Forecast.ForecastDays[0].Day.MinTempC°C<br />
                 Avg Temp: @history.Forecast.ForecastDays[0].Day.AvgTempC°C<br />
                 Condition: @history.Forecast.ForecastDays[0].Day.Condition.Text<br />
+                <img src="@history.Forecast.ForecastDays[0].Day.Condition.Icon" alt="Weather Icon" />
             </li>
         }
     </ul>
